# crec

./: LICENSE  README.md  pyproject.toml  setup.py  test_crec.py
.github/workflows/: publish.yml
crec/: __init__.py
crec/sources/: generic.py  instagram.py  tiktok.py  twitter.py  youtube.py
crec/utils/: file_handler.py
