[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crec"
version = "0.1.0"
description = "The Ultimate Media Downloader - Download videos, audio, and images from various platforms"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "knkr1", email = "kaan@karesi.dev"}
]
dependencies = [
    "yt-dlp>=2023.12.30",
    "ffmpeg-python>=0.2.0",
    "win10toast>=0.9; platform_system == 'Windows'",
    "tqdm>=4.65.0"
]

[project.urls]
Homepage = "https://github.com/knkr1/crec"
Repository = "https://github.com/knkr1/crec.git"

[project.scripts]
crec = "crec.cli:main" 